# flayout

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _config.yml  bokeh.html  cell.html  environment.yml  example_lib.html  factories.html  gui.html  index.html  index.ipynb  io.html  notebook.html  pcell.html  settings.ini  setup.cfg  sidebar.json
.github/workflows/: main.yml
_data/: topnav.yml
_data/sidebars/: home_sidebar.yml
docs/: _config.yml  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/_includes/: head.html
flayout/: __init__.py  _nbdev.py  bokeh.py  cell.py  example_lib.py  factories.py  gui.py  io.py  layers.lyp  notebook.py  pcell.py
flayout/ext/: bokeh.py  notebook.py
source/: 00_index.ipynb  01_bokeh.ipynb  01_factories.ipynb  02_cell.ipynb  02_notebook.ipynb  03_cell.ipynb  03_pcell.ipynb  04_factories.ipynb  04_io.ipynb  05_io.ipynb  06_pcell.ipynb  50_gui.ipynb  91_bokeh.ipynb  92_notebook.ipynb  99_example_lib.ipynb
