[metadata]
name = flayout
version = 0.0.0
description = Thin functional/declarative wrapper around the KLayout Python API
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering

[options]
packages =
  flayout
install_requires =
  klayout
  fastcore
  numpy
  ipykernel
  bokeh
  lxml
  pyyaml
  tqdm

[options.extras_require]
dev =
  black
  bump2version
  ipykernel
  isort
  line_profiler
  nbdev
  nbstripout
  papermill
  pre-commit
  pytest

[options.package_data]
* =
  README.md
  LICENSE
flayout =
  layers.lyp
