[metadata]
name = flayout
version = 0.0.0
description = Thin functional/declarative wrapper around the KLayout Python API
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering

[options]
packages =
  flayout
install_requires =
  klayout

[options.extras_require]
dev =
  black
  bokeh
  bump2version
  ipykernel
  isort
  lxml
  nbdev
  nbstripout
  numpy
  papermill
  pre-commit
  pytest
  pyyaml
  tqdm

[options.package_data]
* =
  README.md
  LICENSE
flayout =
  layers.lyp
